welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: '(' expected but identifier found.
if Buggle 1 estFaceMur()
   ^Program:2: error: ';' expected but integer literal found.
Buggle 2 avance()
       ^